--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -3,7 +3,7 @@
     "topH1": "FONDO TERRITORIAL MESOAMERICANO",
     "subH1":"de la Alianza Mesoamericana de Pueblos y Bosques",
     "to-second-page": "To second page",
-    "languageSwitcher":"Cambiar a:",
+    "lang":"Idioma",
     "menu" : {
       "option1": "¿Quiénes somos?",
       "option2": "Qué financiamos",
