map strings and styles

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -28,7 +28,17 @@
   },
   "section3": {
     "title": "AMPB Members",
-    "text1": "The FTM focuses its work in Mesoamerica, working closely with the membership of the AMPB and other Indigenous Peoples and Local Communities organizations (IPLCs)."
+    "text1": "The FTM focuses its work in Mesoamerica, working closely with the membership of the AMPB and other Indigenous Peoples and Local Communities organizations (IPLCs).",
+    "org1":"MOCAF NETWORK",
+    "org2": "ACOFOP",
+    "org3": "GUNA GENERAL CONGRESS",
+    "org4": "EMBERÁ-WOUNAAN COMARCA",
+    "org5":"YATAMA",
+    "org6": "RIBCA",
+    "org7": "FEPROAH",
+    "org8":"MASTA",
+    "org9": "NATIONAL ALLIANCE OF COMMUNITY FORESTRY ORGANIZATIONS OF GUATEMALA",
+    "org10": " UTZ CHE’ COMMUNITY FORESTRY ASSOCIATION"
   },
   "section4": {
     "title": "Rationale",
