--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -27,7 +27,17 @@
   },
   "section3": {
     "title": "Miembros de la AMPB",
-    "text1": "Nuestra cooperación se enfoca en Mesoamérica, colaborando estrechamente con la membrecía de la AMPB y otras organizaciones de Pueblos Indígenas y Comunidades Locales (PICLs)."
+    "text1": "Nuestra cooperación se enfoca en Mesoamérica, colaborando estrechamente con la membrecía de la AMPB y otras organizaciones de Pueblos Indígenas y Comunidades Locales (PICLs).",
+    "org1":"RED MOCAF",
+    "org2": "ACOFOP",
+    "org3": "CONGRESO GENERAL GUNA",
+    "org4": "COMARCA EMBERÁ-WOUNAAN",
+    "org5":"INHWANKA RAYA",
+    "org6": "RIBCA",
+    "org7": "FEPROAH",
+    "org8":"MASTA",
+    "org9": "ALIANZA NACIONAL FORESTAL",
+    "org10": "ASOCIACIÓN UTZ CHE’"
   },
   "section4": {
     "title": "Razón de ser",
