--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -83,6 +83,9 @@
   },
   "section9": {
     "title": "How we work?",
+    "pre_text1": "Through a mechanism of open calls for proposals to finance small and medium-sized donations with lower transaction costs, with rights-based approach to IPLC organisations located in key ecosystems of forests, biodiversity and connectivity in Mesoamerica.",
+    "pre_text2": "Continuous and culturally adapted accompaniment of Indigenous Peoples' and Local Communities' organisations through training processes, capacity building and methodologies to strengthen their institutional and governance processes, enhancing the sustainability and quantitative and qualitative impact of their work.",
+    "pre_text3":"In a collaborative and interdisciplinary manner with the different specialized units of the AMPB, which are the Mesoamerican School of Leadership (EML), and the Coordinating Committee of Territorial Women Leaders (CMLT).",
     "text1": "FTM is governed by a 7-person Board of Directors*, composed of:",
     "text2": "4 members of the AMPB.",
     "text3": "3 independent persons",
