--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -18,7 +18,7 @@
   },
 
   "sectionLogos": {
-    "title": "Strategic Partners"
+    "title": "Socios Estratégicos"
   },
   "section2": {
     "title": "Quiénes somos",
@@ -82,6 +82,8 @@
   },
   "section9": {
     "title": "Cómo trabajamos",
+    "pre_text1": "A través de un mecanismo de convocatorias para financiar pequeñas y medianas donaciones con costos menores de transacción, con enfoque de derechos a organizaciones de PICL ubicadas en ecosistemas claves de bosques, biodiversidad y conectividad en Mesoamérica.",
+    "pre_text2": "Acompaña de manera continua y adaptada culturalmente a las organizaciones de Pueblos Indígenas y Comunidades Locales mediante procesos de entrenamiento, capacitaciones y metodologías para fortalecer sus procesos institucionales y de gobernanza, promoviendo así la sostenibilidad y el impacto cuantitativo y cualitativo de la inversión.",
     "text1": "El FTM está gobernado por una Junta Directiva de 7 personas*, compuesta por:",
     "text2": "4 miembros de la AMPB.",
     "text3": "3 personas independientes",
