--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -1,8 +1,10 @@
 {
   "topH1": "FONDO TERRITORIAL MESOAMERICANO",
   "subH1": "de la Alianza Mesoamericana de Pueblos y Bosques",
-  "to-second-page": "To second page",
   "lang":"Language",
+  "aria": {
+    "homeLogo": "Ir al inicio"
+  },
   "menu" : {
     "option1": "Quiénes somos",
     "option2": "Qué financiamos",
@@ -84,6 +86,7 @@
     "title": "Cómo trabajamos",
     "pre_text1": "A través de un mecanismo de convocatorias para financiar pequeñas y medianas donaciones con costos menores de transacción, con enfoque de derechos a organizaciones de PICL ubicadas en ecosistemas claves de bosques, biodiversidad y conectividad en Mesoamérica.",
     "pre_text2": "Acompaña de manera continua y adaptada culturalmente a las organizaciones de Pueblos Indígenas y Comunidades Locales mediante procesos de entrenamiento, capacitaciones y metodologías para fortalecer sus procesos institucionales y de gobernanza, promoviendo así la sostenibilidad y el impacto cuantitativo y cualitativo de la inversión.",
+    "pre_text3":"De manera conjunta e interdisciplinaria con las diferentes unidades especializadas de la AMPB, que son la Escuela Mesoamericana de Liderazgo (EML), y la Coordinadora de Mujeres Líderes Territoriales (CMLT).",
     "text1": "El FTM está gobernado por una Junta Directiva de 7 personas*, compuesta por:",
     "text2": "4 miembros de la AMPB.",
     "text3": "3 personas independientes",
