--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -69,7 +69,7 @@
   },
   "section7": {
     "title": "Al 2028 el FTM aspira a:",
-    "text1": "ncrementar financiamiento directo a un promedio anual de 30 a 40 donativos con montos a partir de USD 50 mil.",
+    "text1": "incrementar financiamiento directo a un promedio anual de 30 a 40 donativos con montos a partir de USD 50 mil.",
     "text2": "Extender las zonas geográficas y territorios priorizados por el FTM, ",
     "text3": "involucrando a más socios y aliados estratégicos y expandiendo su apoyo a otras organizaciones más allá de la membresía de la AMPB."
   },
