--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -44,7 +44,7 @@
   },
   "section4": {
     "title": "Rationale",
-    "text1_part1": "According to a study conducted by Rainforest Foundation Norway1, by 2021, less than 1% of global climate finance has reached Indigenous Peoples and Local Communities (IPLCs) in the global south over the last ten year.",
+    "text1_part1": "According to a study conducted by Rainforest Foundation Norway",
     "text1_super": "1",
     "text1_part2": ", by 2021, less than 1% of global climate finance has reached Indigenous Peoples and Local Communities (IPLCs) in the global south over the last ten year.",
     "text2": "In response to this situation, the FTM, was created with the objective of facilitating and promoting direct territorial investment in favor of Indigenous Peoples and Local Communities (IPLCs). Likewise, the FTM seeks to accompany the organizations in a culturally adapted manner, through the creation and strengthening of capacities, promoting sustainability and positive impacts on the investment.",
