--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -47,8 +47,13 @@
     "text1_part1": "According to a study conducted by Rainforest Foundation Norway",
     "text1_super": "1",
     "text1_part2": ", by 2021, less than 1% of global climate finance has reached Indigenous Peoples and Local Communities (IPLCs) in the global south over the last ten year.",
-    "text2": "In response to this situation, the FTM, was created with the objective of facilitating and promoting direct territorial investment in favor of Indigenous Peoples and Local Communities (IPLCs). Likewise, the FTM seeks to accompany the organizations in a culturally adapted manner, through the creation and strengthening of capacities, promoting sustainability and positive impacts on the investment.",
-    "text3": "1. 2021. Rainforest Foundation Norway. Falling Short: Donor funding for Indigenous Peoples and local communities to secure tenure rights and manage forests in tropical countries  (2011–2020)."
+    "text2_part1": "In response to this situation, the ",
+    "text2_part2": "FTM",
+    "text2_part3": ", was created with the objective of facilitating and promoting direct territorial investment in favor of Indigenous Peoples and Local Communities (IPLCs).",
+    "text3_part1": "Likewise, the FTM seeks to accompany the organizations in a culturally adapted manner, through ",
+    "text3_part2": "the creation and strengthening of capacities, promoting sustainability and positive impacts on the investment.",
+    "text4": "1. 2021. Rainforest Foundation Norway. Falling Short: Donor funding for Indigenous Peoples and local communities to secure tenure rights and manage forests in tropical countries  (2011–2020)."
+    
   },
   "section5": {
     "title": "What do we finance?",
