--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -46,8 +46,13 @@
     "text1_part1": "Según un estudio realizado por Rainforest Foundation Norway",
     "text1_super": "1",
     "text1_part2": ", en 2021, menos del 1% del financiamiento climático global ha llegado a los Pueblos Indígenas y Comunidades Locales (PICLs) del sur global durante los últimos diez años.",
-    "text2": "Ante esta situación, surge el FTM, con el objetivo de facilitar y promover la inversión territorial directa en favor de los Pueblos indígenas y Comunidades Locales (PICLs). Asimismo, el FTM busca acompañar de manera culturalmente adaptada a las organizaciones, mediante la creación y fortalecimiento de capacidades, fomentando la sostenibilidad e impactos positivos en la inversión.",
-    "text3": "1. 2021. Rainforest Foundation Norway. Falling Short: Donor funding for Indigenous Peoples and local communities to secure tenure rights and manage forests in tropical countries  (2011–2020)."
+    "text2_part1": "Ante esta situación, surge el ",
+    "text2_part2": "FTM",
+    "text2_part3": " con el objetivo de facilitar y promover la inversión territorial directa en favor de los Pueblos indígenas y Comunidades Locales (PICLs).",
+    "text3_part1": "Asimismo, el FTM busca acompañar de manera culturalmente adaptada a las organizaciones, mediante la ",
+    "text3_part2": "creación y fortalecimiento de capacidades, fomentando la sostenibilidad e impactos positivos en la inversión.",
+    
+    "text4": "1. 2021. Rainforest Foundation Norway. Falling Short: Donor funding for Indigenous Peoples and local communities to secure tenure rights and manage forests in tropical countries  (2011–2020)."
   },
   "section5": {
     "title": "Qué financiamos",
