--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -11,7 +11,7 @@
   "menu" : {
     "option1": "Quiénes somos",
     "option2": "Qué financiamos",
-    "option3": "Cómo funcionamos",
+    "option3": "Junta Directiva",
     "option4": "Socios Estratégicos",
     "submenu1_1": "Home",
     "submenu1_2": "Quiénes somos",
@@ -170,7 +170,26 @@
     "g2SubtText3": "emprendimientos apoyados sobre turismo alternativo",
     "g2SubtTitle4": "8",
     "g2SubtText5": "iniciativas forestales comunitarias apoyadas"
-   
+  },
+  "sectionBoard": {
+    "title": "Junta Directiva",
+    "JeffreyCampbell_Name": "Jeffrey Campbell",
+    "JeffreyCampbell_Desc1": "Actualmente jubilado en Estados Unidos después de más de treinta años de experiencia en el empoderamiento de comunidades en paisajes. Experiencia laboral en las Naciones Unidas (FAO) como Gerente, The Forest and Farm Facility, filantropía (The Christensen Fund, Ford Foundation), asistencia bilateral (AAAS/USAID), extensión universitaria (University of Connecticut) consultoría (Winrock International, FAO) , asesor/miembro de la junta (PROFOR, RECOFTC, NFP Facility...). ",
+    "JeffreyCampbell_Desc2": "Centrado en organizaciones de productores forestales y agrícolas, silvicultura comunitaria, política forestal, diversidad biocultural y soberanía alimentaria, empoderamiento de los pueblos indígenas, medios de vida rurales basados ​​en el paisaje, desarrollo sostenible y resiliencia y adaptación al cambio climático.",
+    "JeffreyCampbell_Desc3": "También publica poesía, interpreta y graba música como jhaffur khan azad darakth, cofundador y compositor de la Orquesta naiF. ",
+    "JeffreyCampbell_Desc4": "Nacido y criado en la India, esposo, padre y abuelo.",
+    
+    "SusanKandel_Name": "Susan Kandel",
+    "SusanKandel_Desc1": "Susan Kandel es Directora Adjunta e Investigadora Principal de PRISMA. ",
+    "SusanKandel_Desc2": "Tiene una licenciatura en sociología, una maestría en desarrollo regional e internacional de la Universidad de California, Los Ángeles y estudios de posgrado en desarrollo sostenible de recursos de UC Berkeley, y en derechos humanos internacionales de la Instituto Internacional de Derechos Humanos. ",
+    "SusanKandel_Desc3": "Las áreas de especialización de la Sra. Kandel incluyen: gobernanza territorial y desarrollo rural; cambio climático y mitigación basada en la adaptación; Migración, desarrollo y gestión de recursos naturales; entre otros temas relevantes. Antes de trabajar en PRISMA, la Sra. Kandel fue Directora del Departamento de Derechos Humanos de un Centro de Refugiados de América Central ubicado en Los Ángeles y Coordinadora del Proyecto del Índice de Responsabilidad, que informó directamente el trabajo de las Comisiones Ad Hoc y de Verdad por mandato de la ONU de El Salvador como parte del proceso de los Acuerdos de Paz.",
+    
+    "KirsiChavda_Name": "Kirsi Chavda",
+    "KirsiChavda_Desc1": "Kirse Chavda es coordinadora de programas en la Fundación Siemenpuu, donde ha canalizado el apoyo a Organizaciones de la Sociedad Civil (OSC) en varios países africanos, asiáticos y latinoamericanos en diversos temas ambientales, incluida la conservación y el uso sostenible de los bosques comunitarios, así como la soberanía alimentaria.",
+    "KirsiChavda_Desc2": "Actualmente, la Sra. Chavda gestiona el programa de Siemenpuu sobre agroecología feminista y bosques comunitarios con aliados en Liberia y Mozambique.",
+    "KirsiChavda_Desc3": "La Sra. Chavda ha entrado el campo de la cooperación al desarrollo desde diferentes ángulos. En el Fondo de Población de las Naciones Unidas, UNFPA, se centró en temas de salud sexual y reproductive y derechos en Honduras durante dos años.",
+    "KirsiChavda_Desc4": " En la oficina de país de la OSC finlandesa Kepa en Nicaragua, contribuyó al fortalecimiento de la sociedad civil, la concientización sobre los impactos de las industrias extractivas y la gobernanza territorial en Mesoamérica durante tres años.",
+    "KirsiChavda_Desc5": "La Sra. Chavda tiene dos maestrías en ciencias sociales, una en Política Social y otra en Trabajo Social, de las Universidades del Este de Finlandia y la de Jyväskylä."
   }
 
 }
