--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -1,7 +1,7 @@
 {
   "topH1": "FONDO TERRITORIAL MESOAMERICANO",
   "subH1": "de la Alianza Mesoamericana de Pueblos y Bosques",
-  "lang":"Language",
+  "lang":"lenguaje",
   "aria": {
     "homeLogo": "Ir al inicio",
     "imgAMPBLogo": "Alianza Mesoamericana de Pueblos y Bosques",
@@ -13,7 +13,7 @@
     "option2": "Qué financiamos",
     "option3": "Junta Directiva",
     "option4": "Socios Estratégicos",
-    "submenu1_1": "Home",
+    "submenu1_1": "Inicio",
     "submenu1_2": "Quiénes somos",
     "submenu1_3": "Miembros de la AMPB",
     "submenu1_4": "Razón de ser",
